--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-leaflet": "^4.2.0",
     "react-scripts": "^4.0.3",
     "react-toastify": "^9.1.3",
+    "vercel": "^32.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,5 +39,8 @@
     "last 1 chrome version",
     "last 1 firefox version",
     "last 1 safari version"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  }
 }
